Explicitly ref the main poppler dll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(PdfPrintPreview
   Qt5::Widgets
   Qt5::Core
   Qt5::PrintSupport
+  poppler$<$<CONFIG:Debug>:d>
   poppler-cpp$<$<CONFIG:Debug>:d>
   poppler-qt5$<$<CONFIG:Debug>:d>
   )
